--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <button class="button" onclick="setAllValues(slider.value)">全设置</button>
     </div>
 <hr />
-<a href="/swipe">切换触摸板控制</a>
+<a href="./swipe">切换触摸板控制</a>
 <hr />
     <!-- WS连接控制 -->
     <div class="button-group">
