--- a/swipe.html
+++ b/swipe.html
@@ -75,7 +75,7 @@
     <!-- 轮盘 -->
     <div id="wheel-container"></div>
 <hr />
-<a href="./">切换通道控制</a>
+<a href="/">切换通道控制</a>
 <hr />
 
     <!-- WebSocket 状态显示 -->
