--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             let sip = wstarget.value.split(":")[0];
             let spp = wstarget.value.split(":")[1];
             logMessage(`请将以下内容复制后粘贴给你想要分享控制权的对象（需要在同一网络下）：`);
-            logMessage(`https://eterill.xyz/OhoVibe/?ip=${sip}&port=${spp} <a href="javascript;;" onclick="copyToClip(\`https://eterill.xyz/OhoVibe/?ip=${sip}&port=${spp}</a>\`">点击复制</a>`);
+            logMessage(`https://eterill.xyz/OhoVibe/?ip=${sip}&port=${spp} <button onclick="copyToClip(\`https://eterill.xyz/OhoVibe/?ip=${sip}&port=${spp}\`">点击复制</button>`);
         }
         // 设置滑条数值
         function setSliderValue(value) {
